--- a/doc/manual/en/installation.tex
+++ b/doc/manual/en/installation.tex
@@ -26,11 +26,11 @@ study the manual and become familiar with XCSoar at home.
 \section{How to get the most from XCSoar}
 
 In order to achieve your maximum benefit from XCSoar, you are kindly asked to 
-do do some more after having installed the software and downloaded some data 
+do some more after having installed the software and downloaded some data
 files. ``Some more'' includes personal and plane data as well as configuration 
 of just a few features. Unless you are willing to tweak everything XCSoar 
 provides, this could be done in a rather short time. Necessary steps are 
-summarized in an \emph{XCSoar Checklist}, given in the next chapter.
+summarized in an \emph{XCSoar Checklist}, given in the next section.
 
 If you are planning to arrange a system with several components engaged in, 
 this manual will give you valuable advice on both, how to set up things and how 
@@ -55,7 +55,7 @@ discover/manual.html}.
 \item finish setup and familiarize
 \item mount hardware
 \item add items listed underneath to your checklists
-\item make "home"
+\item make ``home''
 \end{itemize}
 
 \subsection*{Conduct preflight check, including}
@@ -91,18 +91,10 @@ discover/manual.html}.
 XCSoar runs on the following platforms:
 
 \begin{itemize}
-\item PDAs with Pocket PC 2003, 2002, 2003 \\
-  Example: iPaq 3800, iPaq 3900
-\item PDAs with Windows Mobile \\
-  Example: Paq hx4700, Dell Axim x51v
-\item PNAs with Windows CE 3.0 or newer \\
-  Example: HP314, Mio400
 \item Android mobile phones and tablets with Android 1.6 or newer \\
   Example: Dell Streak, Samsung Galaxy S II, HTC Desire HD,
   Motorola Xoom
-\item eReader Kobo (experimental, Dec. 2013)
-\item Triadis Altair
-\item LX MiniMap
+\item eReader Kobo
 \item Windows 2000 or newer
 \item Linux
 \item Mac OS X (outdated)
@@ -124,8 +116,8 @@ better data for measures and calculations
   flight log can be downloaded
 \item some varios allow synchronising the MacCready setting with
   XCSoar
-\item flarm (and even ADS-B input) provide informations and stati of others 
-around you (- and of course Flarm gives you collision detection)
+\item FLARM (and even ADS-B input) provide informations and states of others
+around you (and of course FLARM gives you collision detection)
 \end{itemize}
 
 \subsection*{Supported external devices and features}
@@ -142,7 +134,7 @@ NMEA Device &
   \begin{sideways} Download\end{sideways} &
   \begin{sideways} Airspeed\end{sideways} & 
   \begin{sideways} Vario\end{sideways} & 
-  \begin{sideways} Baro. altitude\end{sideways} & 
+  \begin{sideways} Baro.\ altitude\end{sideways} &
   \begin{sideways} Wind\end{sideways} &
   \begin{sideways} G-Sensor\end{sideways} \\
 \hline
@@ -153,7 +145,7 @@ While most Windows CE based devices have a serial port, such legacy
 hardware is not present in modern Android devices.  Those can either
 use Bluetooth or the Android IOIO board.  To use Bluetooth, you need
 to connect the external device to a Bluetooth-to-Serial adapter, such
-as the K6-Bt or the Glidertools VFBT-1.
+as the K6-Bt or the SoarTronic-BT1/2. %Glidertools is defunct.
 
 
 \section{Software installation}
@@ -184,14 +176,15 @@ file \texttt{KoboRoot.tgz} from the XCSoar website into that
 directory (\url{http://www.xcsoar.org/hardware/}). Unplug the Kobo and reboot it (switch it off completely,
 and switch it on again).  You will see the message ``Updating'', and
 after a few minutes, the Kobo shows a menu that allows you to launch
-XCSoar or the Kobo e-book reader software.
+XCSoar or the Kobo \mbox{e-book} reader software.
 
 To copy data files (maps, waypoints, ...) to the Kobo, launch the
 original Kobo software (``Nickel'') and connect the Kobo to your PC
 again.  Copy the files into a directory called \texttt{XCSoarData} at
 the top level.
 
-Alternatively data files may be downloaded via XCSoar's file manager, after having invoked a W-LAN-connection just before launching XCSoar.  
+Alternatively data files may be downloaded via XCSoar's file manager,
+after having invoked a WLAN connection just before launching XCSoar.
 
 \subsubsection{Hacking the Kobo}
 
@@ -208,31 +201,6 @@ you know what you're doing, you can use this script to do things
 before \texttt{Nickel} is fully started, for example send commands
 to your attached vario (to shut it down, to cut the volume, etc...).
 
-\subsection*{On a PDA (Windows Mobile, PocketPC)}
-
-Choose one of the targets:
-
-\begin{description}
-\item[\texttt{PPC2003}] Pocket PC 2003, Windows CE 4.0
-\item[\texttt{WM5}] Windows Mobile 5 or newer
-\item[\texttt{WM5X}] Windows Mobile 5 or newer with XScale CPU or
-  better (e.g. hx4700)
-\end{description}
-
-Download the program file \verb|XCSoar.exe| to a SD card.  You can
-launch it with the File Explorer.
-\sketch{figures/XCS_Today.png}
-Another method to install XCSoar on a PDA is the CAB file.  Download
-it to the SD card.  Use the File Explorer to install it.  After the
-installation, the XCSoar `FLY' and `SIM' launcher icons will be
-visible on the Today screen.
-
-
-\subsection*{On a PNA (Windows CE)}
-
-Download the program file \verb|XCSoar.exe| (target ``WM5'') to a SD
-card.  You can launch it with the File Explorer.
-
 \subsection*{On a Windows PC}
 
 Download the program file \verb|XCSoar.exe| (target ``PC'') to your
@@ -242,7 +210,7 @@ hard disk.
 
 The file downloaded is \verb|xcsoar_XXX.deb|, where \verb|XXX| includes
 the version number and platform, e.g. \verb|xcsoar_6.0.4_i386.deb|.
-The is a Debian package and can be installed using 
+This is a Debian package and can be installed using
 \begin{center}
 \verb|sudo dpkg -i xcsoar_XXX.deb|.
 \end{center}
@@ -298,9 +266,6 @@ XCSoar looks for it in \texttt{My Documents}.
 The directory is called \verb|.xcsoar| in the user's home directory.
 \item[Android Devices]
 \texttt{XCSoarData} is on the SD card.
-\item[Altair]
-If XCSoarData exists on an USB drive, that one is used, otherwise the
-internal storage is used.
 \end{description}
 
 
@@ -329,21 +294,6 @@ Two modes are available inside the XCSoar application:
 \item[SIM] This starts XCSoar in simulator mode, no serial communications
   are attempted.
 \end{description}
-
-\subsection*{Altair version}
-XCSoar starts up automatically when Altair is powered on.
-The PWR/ESC button (top left) has multiple functions:
-\begin{description}
-\item[Powering on]  Press and hold the PWR/ESC button for one second.
-  The LED in the button will light up, and XCSoar will start after
-  Altair has booted.
-\item[Powering off]  Press and hold the PWR/ESC button for 3 seconds.
-  Altair will switch off.
-\item[Escape] Pressing the PWR/ESC button quickly acts as an
-Escape key, typically used to close dialog pages or as a cancel function.
-\end{description}
-
-The Altair version of XCSoar does not include a simulator mode.
 
 \subsection*{XCSoar PC version}
 The program can be run by opening the explorer window, finding the directory
@@ -375,7 +325,7 @@ data files that you placed in the \verb|XCSoarData| directory.
 To tell XCSoar which files to load, double click/tap the map (the large,
 blank white part with the glider symbol in the center),
 choose the menu \bmenug{Config 2} (click/tap it twice), then select the item 
-\bmenug{System}.  The Configuration screen should be displayed:
+\mbox{\bmenug{System}.}  The Configuration screen should be displayed:
 \sketch{figures/config-basic.png}
 The first page allows you to choose the map, 
 waypoint and airspace files, by clicking/tapping on the text boxes.
@@ -386,7 +336,7 @@ will be loaded automatically at run time.
 
 \subsection*{Start-up and user profiles}\label{sec:profiles}
 When XCSoar starts up, it will check for existing profiles. If multiple
-profiles are detected it will displays a small window asking you which profile
+profiles are detected it will display a small window asking you which profile
 to load. To proceed, choose the desired profile and press Enter. If no
 profile is chosen the settings from the last session are loaded again. Profiles
 can be useful for example in the following cases:
@@ -415,9 +365,9 @@ As an example you might create a set of files as is:
 \subsection*{SIM mode}
 XCSoar comes with a simple interface allowing for conducting a simulated 
 flight. Depending on the hardware platform, there are different 
-methods for altering values of bearing, speed, an height.  Simulation is 
+methods for altering values of bearing, speed, and height.  Simulation is
 intended for your first familiarization with XCSoar in action. If you like the 
-idea simulating a more realistic thing at home, you should acquire a "true" 
+idea simulating a more realistic thing at home, you should acquire a ``true''
 soaring simulator, to be connected to XCSoar.
 
 On the map screen, clicking/touching the glider symbol
@@ -464,6 +414,3 @@ opened by double-clicking on the map or the \InfoBox es.
 
 For PC versions, XCSoar can also be shut down by clicking the close icon
 on the XCSoar window.
-
-For Altair, XCSoar is shut down by holding the PWR button for two seconds or
-more.
